--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,25 +1,24 @@
-.navlink {
+.nav-link {
     font-size: 1.2rem;
-    font-weight: lighter;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    color: lightgray;
+    color: lightgray !important;
 }
 
-.navlink:hover {
-    color: white;
+.nav-link:hover {
+    color: white !important;
 }
 
 .navbrand {
     font-size: 2rem !important;
     font-family: cursive;
-    color: whitesmoke;
+    color: whitesmoke !important;
 }
 
 .navlink-bottom {
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: lighter;
     font-family:Georgia, 'Times New Roman', Times, serif;
     color: black;
+    text-decoration: none !important;
 }
 
 .navlink-bottom:hover {
@@ -35,10 +34,16 @@
 }
 
 #navbar-upper {
-    background-color:blue;
+    background-color:  #009B77;
+    z-index: 10;
 }
 
 #mybar-lower
 {
     background-color:white;
+}
+
+#search {
+    border-radius: 0;
+    border-left: none;
 }
