Create Account Added

--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -1,42 +1,37 @@
 #login-div {
-    width: 40%;
-    margin: auto;
-    margin-top: 7em;
-    margin-bottom: 10em;
-    border: 2px solid whitesmoke;
+    width: 30%;
+    height: 40%;
+    font-size: 1.2rem;
     border-radius: 3px;
-    padding-left: 13em;
-    padding-top: 3em;
     padding-bottom: 3em;
-    background-image: linear-gradient(to bottom right, #1F85DE, #00bfff);
-    z-index: 20;
+    background-image: linear-gradient(to bottom right, #22A7F0, #19B5FE);
+    z-index: 10;
     box-shadow: 10px 10px 25px;
     cursor: pointer;
     position: fixed;
-    top: 7em;
-    left: 28em;
-}
-
-#login-div:hover {
-    background-image: linear-gradient(to bottom right, #00bfff, #1F85DE);
+    top: 25%;
+    left: 34%;
+    overflow: auto;
 }
 
 #login-form {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 1.1rem;
+    font-family: monospace;
+    font-size: 1.1em;
 }
 
 #forgot {
-    font-size: 1rem;
+    font-size: 0.8em;
     text-decoration: none;
     color: white;
 }
 
+#forgot:hover {
+    color: red;
+}
+
 #login-details {
-    width: 225px;
-    height: 40px;
     border: 1px solid red;
-    border-radius: 20px;
+    border-radius: 3px;
     color: red;
     background-color: white;
 }
@@ -47,17 +42,20 @@
 }
 
 #username {
+    width: 80%;
+    height: 80%;
     border: 1px solid royalblue;
     border-radius: 2px;
 }
 
 #password {
+    width: 80%;
+    height: 80%;
     border: 1px solid royalblue;
     border-radius: 2px;
 }
 
 #cross {
-    position: absolute;
-    top: -1.5em;
-    right: -1.5em;
+    float: right;
+    margin-right: -1em;
 }
