--- a/src/components/Stays/index.css
+++ b/src/components/Stays/index.css
@@ -1,7 +1,8 @@
 .stays {
     height: 82vh;
     font-size: 1rem;
-    margin: 5em 1em;
+    padding: 5em 1em;
+    margin-bottom: 10em;
     font-family:'Times New Roman', Times, serif;
 }
 
