--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -1,28 +1,33 @@
 #login-div {
-    width: 30%;
-    height: 40%;
+    width: 100vw;
+    height: 100vh;
     font-size: 1.2rem;
-    border-radius: 3px;
-    padding-bottom: 3em;
-    background-image: linear-gradient(to bottom right, #22A7F0, #19B5FE);
+    background-color: rgba(0, 0, 0, 0.3);
+    /* background-image: linear-gradient(to bottom right, #22A7F0, #19B5FE); */
     z-index: 10;
-    box-shadow: 10px 10px 25px;
-    cursor: pointer;
     position: fixed;
-    top: 25%;
-    left: 34%;
-    overflow: auto;
+    top: 0;
+    left: 0;
 }
 
 #login-form {
     font-family: monospace;
-    font-size: 1.1em;
+    background-color: #ffffff;
+    width: 400px;
+    max-width: 80%;
+    max-height: 55%;
+    cursor: pointer;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2) ;
+    border-radius: 3px;
+    padding: 10px 30px;
+    margin: auto;
+    margin-top: 15em;
+    
 }
 
 #forgot {
     font-size: 0.8em;
     text-decoration: none;
-    color: white;
 }
 
 #forgot:hover {
@@ -37,25 +42,44 @@
 }
 
 #login-details:hover {
-    border: 1px solid green;
+    border-color: green;
     color: green;
 }
 
 #username {
-    width: 80%;
-    height: 80%;
+    width: 100%;
     border: 1px solid royalblue;
     border-radius: 2px;
 }
 
 #password {
-    width: 80%;
-    height: 80%;
+    width: 100%;
     border: 1px solid royalblue;
     border-radius: 2px;
 }
 
 #cross {
     float: right;
-    margin-right: -1em;
+    margin-right: -1.5em;
+    margin-top: -0.5em;
+    margin-bottom: 1em;
+}
+
+@media (max-height: 550px) {
+    #login-form {
+        margin-top: 10em;
+        overflow: auto;
+    }
+}
+
+@media (max-height: 380px) {
+    #login-form {
+        margin-top: 8em;
+    }
+}
+
+@media (max-height: 300px) {
+    #login-form {
+        margin-top: 5em;
+    }
 }
